[Feat] AoP 리소스 무결성 확인